--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <h1>Kelwin Rodrigues</h1>
 
     <p>
-        Meu nome é Kelwin, tenho 23 anos, moro em São João de Meriti - RJ e sou apaixonado por tecnologia.
-        Gosto muito de futebol, hardware e games.
+        Meu nome é Kelwin, tenho 23 anos e sou de São João de Meriti, Rio de Janeiro.
+        Comecei a estudar sobre tecnologia ainda criança, onde tive a primeira oportunidade de iniciar um curso de montagem e manutenção de computadores.
+        Desde então, tenho me aprofundado cada vez mais nesse universo fascinante. Sou apaixonado por futebol, montar computadores e jogar jogos do gênero FPS.
+
     </p>
 
     <ul>
