--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li>Explorar novas tecnologias</li>
     </ul>
 
-    <img src="cr7.png" alt="Cristiano Ronaldo. Um dos maiores futebolistas do mundo" />
+    <img src="image.png" alt="Cristiano Ronaldo. Um dos maiores futebolistas do mundo" />
 
     <h2>Países que gostaria de visitar</h2>
     <table>
