--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>
         Meu nome é Kelwin, tenho 23 anos e sou de São João de Meriti, Rio de Janeiro.
         Comecei a estudar sobre tecnologia ainda criança, onde tive a primeira oportunidade de iniciar um curso de montagem e manutenção de computadores.
-        Desde então, tenho me aprofundado cada vez mais nesse universo fascinante. Sou apaixonado por futebol, montar computadores e jogar jogos do gênero FPS.
+        Desde então, tenho me aprofundado cada vez mais nesse universo fascinante. Sou apaixonado por futebol, montar computadores e jogar jogos do gênero FPS. Abaixo estão meus hobbies.
 
     </p>
 
